--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "telegram-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "bot": "node bot.js",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "cross-env NODE_ENV=production node server.js",
+    "dev": "nodemon server.js",
+    "migrate-db-prod": "cross-env NODE_ENV=production npx sequelize-cli db:migrate",
+    "seed-db-prod": "cross-env NODE_ENV=production npx sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "",
@@ -17,10 +19,13 @@
     "express": "4.18.2",
     "hbs": "4.2.0",
     "mysql2": "3.1.2",
+    "sequelize": "6.29.0",
     "telegraf": "4.11.2"
   },
   "devDependencies": {
+    "cross-env": "7.0.3",
     "nodemon": "2.0.21",
+    "sequelize-cli": "6.6.0",
     "vhost": "3.0.2"
   }
 }
