--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "16.0.3",
+    "excel4node": "^1.8.0",
     "express": "4.18.2",
     "hbs": "4.2.0",
+    "moment": "^2.29.4",
     "mysql2": "3.1.2",
     "sequelize": "6.29.0",
     "telegraf": "4.11.2"
