--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "telegram-bot",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "bot": "node bot.js",
-    "start": "cross-env NODE_ENV=production node server.js",
-    "dev": "nodemon server.js",
+    "start": "cross-env NODE_ENV=production node main.js",
+    "dev": "nodemon main.js",
     "migrate-db-prod": "cross-env NODE_ENV=production npx sequelize-cli db:migrate",
+    "migrate-drop-prod": "cross-env NODE_ENV=production npx sequelize-cli db:migrate:undo:all",
     "seed-db-prod": "cross-env NODE_ENV=production npx sequelize-cli db:seed:all"
   },
   "keywords": [],
