--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "bot": "node bot.js",
     "start": "node main.js",
-    "dev": "nodemon main.js",
+    "dev": "nodemon server.js",
     "migrate-db-prod": "cross-env NODE_ENV=production npx sequelize-cli db:migrate",
     "migrate-drop-prod": "cross-env NODE_ENV=production npx sequelize-cli db:migrate:undo:all",
     "seed-db-prod": "cross-env NODE_ENV=production npx sequelize-cli db:seed:all"
