--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "bot": "node bot.js",
-    "start": "node main.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "migrate-db-prod": "cross-env NODE_ENV=production npx sequelize-cli db:migrate",
     "migrate-drop-prod": "cross-env NODE_ENV=production npx sequelize-cli db:migrate:undo:all",
